@@ -1,4 +1,5 @@
 3.10
+ * Don't shut down socket input/output on StreamSession (CASSANDRA-12903)
  * Fix Murmur3PartitionerTest (CASSANDRA-12858)
  * Move cqlsh syntax rules into separate module and allow easier customization (CASSANDRA-12897)
  * Fix CommitLogSegmentManagerTest (CASSANDRA-12283)
